Week 5 in-weeek updates

--- a/MATH60082-lab-class-5.ipynb
+++ b/MATH60082-lab-class-5.ipynb
@@ -83,7 +83,7 @@
     "$$\n",
     "where $\\phi_k\\sim N(0,1)$, $\\Delta t = T/K$ and $t_k=k\\Delta t$. This is an adapted Euler scheme, and generates ok results but is highly inefficient.\n",
     "\n",
-    "Instead, as you may have already seen, we can make use of Ito's lemma to solve the SDE analytically, resulting in the relationship\n",
+    "Instead, as you may have already seen, we can make use of It&ocirc;'s lemma to solve the SDE analytically, resulting in the relationship\n",
     "$$\n",
     "\\ln S_T -\\ln S_0 \\sim N\\bigg(\\left(r-q-\\frac12\\sigma^2\\right)T,\\sigma^2 T\\bigg)\n",
     "$$\n",
@@ -294,10 +294,10 @@
     "\n",
     "Here let's use the `timeit` library to get the running times for some different code. We are going to experiment with 3 different approaches to the problem, each of which should deliver broadly the same results (although this should be checked).\n",
     "\n",
-    "## Scheme 1: Euler Monte Carlo Approach\n",
+    "## Scheme 1: Euler &mdash; Maruyama Approach\n",
     "1. Split $T$ into $K$ equally spaced times, with $\\Delta t=\\frac{T}{K}$ and $t^k = k\\Delta t$.\n",
     "2. Simulate $n\\times K$ random increments according to $\\Delta W \\sim N(0,\\Delta t)$\n",
-    "3. Create a path using Euler scheme $S^{k+1} = S^{k}(1+(r-q)\\Delta t + \\sigma \\Delta W)$ \n",
+    "3. Create a path using the Euler-Maruyama scheme $S^{k+1} = S^{k}(1+(r-q)\\Delta t + \\sigma \\Delta W)$ \n",
     "4. Sum up discounted payoff and take the average\n",
     "\n",
     "## Scheme 2: Integrated Wiener Monte Carlo Approach\n",
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
