--- a/MATH60082-lab-workbook-5.ipynb
+++ b/MATH60082-lab-workbook-5.ipynb
@@ -126,7 +126,7 @@
    "source": [
     "import numpy\n",
     "rng = numpy.random.default_rng(seed=0) # create a random number generator and reset the starting value\n",
-    "def monteCarlov1(S_0,T,X,r,q,sigma,n,K):\n",
+    "def monteCarlo1(S_0,T,X,r,q,sigma,n,K):\n",
     "    dt = T/K\n",
     "    dW = rng.normal(0.0,numpy.sqrt(dt),size=(n,K))\n",
     "    sum = 0.0\n",
@@ -136,14 +136,14 @@
     "            St=St + (r-q)*St*dt + sigma*St*dW[i][k]\n",
     "        sum += max(St-X,0.0)\n",
     "    return sum/n *numpy.exp(-r*T)\n",
-    "def monteCarlov2(S_0,T,X,r,q,sigma,n):\n",
+    "def monteCarlo2(S_0,T,X,r,q,sigma,n):\n",
     "    WT = rng.normal(0.0,numpy.sqrt(T), n)\n",
     "    sum = 0.0\n",
     "    for i in range(0,n):\n",
     "        STi = S_0*numpy.exp((r-q-0.5*sigma*sigma)*T+sigma*WT[i])\n",
     "        sum += max(STi-X,0.0)\n",
     "    return sum/n *numpy.exp(-r*T)\n",
-    "def monteCarlov3(S_0,T,X,r,q,sigma,n):\n",
+    "def monteCarlo3(S_0,T,X,r,q,sigma,n):\n",
     "    ST = rng.lognormal(numpy.log(S_0) + (r-q-0.5*sigma*sigma)*T, sigma*numpy.sqrt(T), n)\n",
     "    sum = 0.0\n",
     "    for i in range(0,n):\n",
@@ -202,17 +202,17 @@
     "q=0.02\n",
     "sigma=0.4\n",
     "\n",
-    "script=\"monteCarlov1(S_0,T,X,r,q,sigma,n,K)\"\n",
+    "script=\"monteCarlo1(S_0,T,X,r,q,sigma,n,K)\"\n",
     "codeRuns = 100\n",
     "timeSimulate = timeit( script,number=codeRuns,globals=globals() )\n",
     "\n",
     "print(\"Time taken to run \",codeRuns,\" simulations with \",n,\" paths is\", timeSimulate,\" seconds.\")\n",
-    "script=\"monteCarlov2(S_0,T,X,r,q,sigma,n)\"\n",
+    "script=\"monteCarlo2(S_0,T,X,r,q,sigma,n)\"\n",
     "codeRuns = 100\n",
     "timeSimulate = timeit( script,number=codeRuns,globals=globals() )\n",
     "\n",
     "print(\"Time taken to run \",codeRuns,\" simulations with \",n,\" paths is\", timeSimulate,\" seconds.\")\n",
-    "script=\"monteCarlov3(S_0,T,X,r,q,sigma,n)\"\n",
+    "script=\"monteCarlo3(S_0,T,X,r,q,sigma,n)\"\n",
     "codeRuns = 100\n",
     "timeSimulate = timeit( script,number=codeRuns,globals=globals() )\n",
     "\n",
