Advance work for Week 6

--- a/solutions/MATH60082-lab-solution-5.ipynb
+++ b/solutions/MATH60082-lab-solution-5.ipynb
@@ -432,7 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll consider an up-and-in barrier option that pays-off like a call option if, for any sampled time in $0 \\leq t \\leq T$, the price of the underlying meets or exceeds a threshold that's 20% higher than the initial price, $S_0$. If the barrier isn't crossed, the option pays nothing. For this case, we need to use Euler-Maruyama paths."
+    "We'll consider an up-and-in barrier option that pays off like a call option if, for any sampled time in $0 \\leq t \\leq T$, the price of the underlying meets or exceeds a threshold that's 20% higher than the initial price, $S_0$. If the barrier isn't crossed, the option pays nothing. For this case, we need to use Euler-Maruyama paths."
    ]
   },
   {
@@ -457,7 +457,7 @@
     "    # Do the remaining steps\n",
     "    for j in range(K):\n",
     "        # The line below works with whole rows of the matrices, which\n",
-    "        # is equivalent to doing the whole collection of nPaths paths\n",
+    "        # is equivalent to updating the whole collection of nPaths paths\n",
     "        # at a stroke.\n",
     "        pathMat[j+1,:] = pathMat[j,:]*(1.0 + (r - q)*dt + (sigma * dwMat[j,:]))\n",
     "\n",
@@ -505,7 +505,7 @@
    "source": [
     "# Define a function that takes a single path and returns the payoff\n",
     "def barrierPayoff( S_thresh, S_path, X ):\n",
-    "    if( np.any(S_path >= S_thresh) ):\n",
+    "    if( np.any(S_path >= S_thresh) ): # See the documentation for NumPy's any()\n",
     "        payoff = max( S_path[-1] - X, 0.0 ) # S_path[-1] is final entry in path, S(T),\n",
     "    else:\n",
     "        # Option never activated.\n",
