--- a/solutions/MATH60082-lab-solution-5.ipynb
+++ b/solutions/MATH60082-lab-solution-5.ipynb
@@ -578,7 +578,7 @@
     }
    ],
    "source": [
-    "# Estimate the eta, the \n",
+    "# Estimate the eta\n",
     "varEstimates = np.var( barrierResults, axis=1 ) # variances across rows\n",
     "etaEstimates = np.sqrt(varEstimates * sampleSize) # we expect the variance to decrease like 1/N\n",
     "vGrandMean = np.mean( barrierResults )\n",
@@ -622,7 +622,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thus the behaviour is not unlike that above, save that this option is a bit less valuable at $t=0$ as, at t hat point, we don't know whether it will ever activate.."
+    "Thus the behaviour is not unlike that above, save that this option is a bit less valuable at $t=0$ as, at t hat point, we don't know whether it will ever activate."
    ]
   },
   {
@@ -786,7 +786,7 @@
     "mySamples = [monteCarlo3(S_0,T,X,r,q,sigma,N) for j in range(N)]\n",
     "etaEstimate = np.std(mySamples) * sqrt(N)\n",
     "\n",
-    "# Now construct a confidence interval for an estimate based on 1000000 simulated values\n",
+    "# Now construct a confidence interval (CI) for an estimate based on 1000000 simulated values\n",
     "confLevel = 0.95\n",
     "alpha = 1.0 - confLevel\n",
     "\n",
