Correct typo in explanations of Hlaton sequence

--- a/examples/HaltonSeq.ipynb
+++ b/examples/HaltonSeq.ipynb
@@ -48,7 +48,8 @@
    "source": [
     "For example, in base-2 \n",
     "$$\n",
-    "    1101 \\rightarrow 0.1011 = 1 \\times 2^{-1} + 0 \\times 2^{-2} + 1 \\times 2^{-3} + 1 \\times 2^{-4} = 11/16.\n",
+    "    1101 \\rightarrow 0.1011 = 1 \\times 2^{-1} + 0 \\times 2^{-2} + 1 \\times 2^{-3} + 1 \\times 2^{-4} \n",
+    "    = 1/2 + 1/4 + 1/16 = 8/16 + 4/16 + 1/16 = 13/16.\n",
     "$$"
    ]
   },
@@ -91,7 +92,7 @@
     "    while j > 0:\n",
     "        crntDigit = j % p # Gets rightmost p-nary digit\n",
     "        result += crntDigit * pPow\n",
-    "        j = j // p\n",
+    "        j = j // p # integer division\n",
     "        pPow *= pInverse\n",
     "\n",
     "    return result\n",
