--- a/solutions/SLTN-lab-class-10.ipynb
+++ b/solutions/SLTN-lab-class-10.ipynb
@@ -421,9 +421,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With jmax varying by 2 each time, if the method is order two, i.e.\n",
+    "With `jmax` increasing by 2 each time, if the method is order two, i.e.\n",
     "$$\n",
-    "V_\\text{approx} = V* + \\frac{B}{jmax^2} + ...\n",
+    "V_\\text{approx} = V^\\star + \\frac{B}{jmax^2} + ...\n",
     "$$\n",
     "then successive difference should converge towards a value of 4. It looks\n",
     "as though it does although stability might be an issue."
@@ -439,11 +439,11 @@
     "$$\n",
     "to maintain stability, then\n",
     "$$\n",
-    "V_\\text{approx} = V^* + \\frac{A}{imax} + \\frac{B}{jmax^2} + ....\n",
+    "V_\\text{approx} = V^\\star + \\frac{A}{imax} + \\frac{B}{jmax^2} + ....\n",
     "$$\n",
     "or\n",
     "$$\n",
-    "V_\\text{approx} = V^* + \\frac{A'}{jmax^2} + ....\n",
+    "V_\\text{approx} = V^\\star + \\frac{A'}{jmax^2} + ....\n",
     "$$\n"
    ]
   },
@@ -491,15 +491,15 @@
    "source": [
     "Now writing\n",
     "$$\n",
-    "V_\\text{approx} = V^* + \\frac{A'}{jmax^2} + ....\n",
+    "V_\\text{approx} = V^\\star + \\frac{A'}{jmax^2} + ....\n",
     "$$\n",
-    "we can find $V^*$ using extrapolation\n",
+    "we can find $V^\\star$ using extrapolation\n",
     "$$\n",
-    "V^* = \\frac13( 4 * V_{2jmax} - V_\\text{jmax} )\n",
+    "V^\\star = \\frac13( 4 * V_{2jmax} - V_\\text{jmax} )\n",
     "$$\n",
     "All that is left now is grid truncation errors\n",
     "$$\n",
-    "V^* = V_\\text{exact} + \\epsilon(S^U) + ....\n",
+    "V^\\star = V_\\text{exact} + \\epsilon(S^U) + ....\n",
     "$$\n",
     "for some unknown function $\\epsilon$. We would like to choose $S^U$ large\n",
     "enough such that the error function $\\epsilon < tol$ where $tol$ is required accuracy.\n"
@@ -911,9 +911,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -925,9 +925,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
