Added material on interpolation to solution

--- a/solutions/MATH60082-lab-solution-8.ipynb
+++ b/solutions/MATH60082-lab-solution-8.ipynb
@@ -972,14 +972,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Interpolation"
+    "## Interpolation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Left as an exercise for the reader: see the documentation for NumPy's [`interp()`](https://numpy.org/doc/stable/reference/generated/numpy.interp.html)for linear interpolation or, for cubic splines (useful if you want to try Richardson extrapolation later in the term), see SciPy's [`CubicSpline()`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.interpolate.CubicSpline.html)"
+    "For more detail., see the documentation for NumPy's [`interp()`](https://numpy.org/doc/stable/reference/generated/numpy.interp.html)for linear interpolation or, for cubic splines, see SciPy's [`CubicSpline()`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.interpolate.CubicSpline.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "V(S_0= 1.9758 ,t=0) := 92.20065343178472\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Do linear interpolation with tools from NumPy\n",
+    "S0 = 1.9758\n",
+    "print(\"V(S_0=\",S0,\",t=0) :=\", np.interp(S0, S, fdV))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively you could try cubic splines. Later if you try using Richardson extrapolation this could come in handy. [SciPy](https://scipy.org) has an easy implementation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy\n",
+    "\n",
+    "V =  scipy.interpolate.CubicSpline(S, fdV)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now you can write `V(S0)` to estimate the value of $V(S, t=0)$ for any $S\\in[0,S_U]$. Although the interpolator will also produce estimates for values of $S$ that lie outside the original domain (extrapolation to $S>S_U$) it is not recommended to trust these estimates."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "V(S_0= 1.9758 ,t=0) := 92.20065343186404\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"V(S_0=\",S0,\",t=0) :=\",V(S0))"
    ]
   },
   {
