--- a/solutions/MATH60082-lab-solution-8.ipynb
+++ b/solutions/MATH60082-lab-solution-8.ipynb
@@ -476,7 +476,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x12a64e840>"
+       "<matplotlib.legend.Legend at 0x15b56d430>"
       ]
      },
      "execution_count": 7,
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
        "(984, 128)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,16 +697,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x13f989640>"
+       "<matplotlib.legend.Legend at 0x3092fc410>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -746,12 +746,31 @@
     "$$\n",
     "   D = \\left[ \\frac{1}{S_u} \\,\\int_0^{S_u} \\left( P(S,0) - P_{FD}(S,0) \\right)^2 \\, dS \\right]^{1/2}\n",
     "$$\n",
-    "where $P(S,0)$ is the analytic solution and $P_{FD}(S,0)$ is the finite-difference approximation."
+    "where $P(S,0)$ is the analytic solution and $P_{FD}(S,0)$ is the finite-difference approximation.\n",
+    "\n",
+    "To understand the code below, consider a trapezoidal rule approximation to an integral like the one above:\n",
+    "$$\n",
+    "   \\frac{1}{S_u} \\,\\int_0^{S_u} f(S)\\, dS \n",
+    "   \\; \\approx \\; \\frac{1}{S_u} \\,\\sum_{j=0}^{J - 1} \\frac{\\Delta S}{2} \\left( f(S_j) + f(S_{j+1}) \\right)\n",
+    "$$\n",
+    "where $J = $ `jMax` is the number of steps, so $\\Delta S = S_u / J$. Thus\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "   \\frac{1}{S_u} \\, \\int_0^{S_u} f(S) \\, dS \n",
+    "        & \\approx \\frac{1}{S_u} \\, \\frac{\\Delta S}{2}  \\sum_{j=0}^{J - 1} \\left( f(S_j) + f(S_{j+1}) \\right) \\\\\n",
+    "        & \\approx \\frac{1}{S_u} \\, \\frac{S_u}{2 J} \\left( \\sum_{j=0}^{J - 1} f(S_j) + \\sum_{j=0}^{J - 1}f(S_{j+1}) \\right) \\\\\n",
+    "        & \\approx \\frac{1}{2J} \\, \\left( \\sum_{j=0}^{J - 1} f(S_j) + \\sum_{k=1}^{J}f(S_{k}) \\right) \\\\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "Most terms of the form $f(S_j)$ appear in both sums, but $f(S_0)$ appears only in the first one, while $f(S_J)$ appears only in the second one. Thus we can write\n",
+    "$$\n",
+    "    \\frac{1}{S_u} \\, \\int_0^{S_u} f(S) \\, dS \\; \\approx \\; \\frac{1}{J} \\sum_{j=0}^J f(S_j) - \\frac{1}{2J} \\left( f(S_0) + f(S_j)\\right).\n",
+    "$$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +791,7 @@
     "# Define a function to compute our measure of error\n",
     "def rmsError( fdV, trueV ):\n",
     "    err = fdV - trueV\n",
-    "    return( sqrt(np.mean(err*err)) )\n",
+    "    return( sqrt(np.mean(err*err) ) )\n",
     "\n",
     "# Apply it to a range of sizes\n",
     "jMaxVals = np.array( [int(pow(2,j)) for j in range(4,11)], dtype=np.uint )\n",
@@ -803,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -921,22 +940,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dS = 12.5, dt = 0.016129032258064516, D[0] = 0.10094385227469042\n",
-      "dS = 6.25, dt = 0.0040650406504065045, D[1] = 0.024800380930649454, D[0]/D[1] = 4.070254104441572\n",
-      "dS = 3.125, dt = 0.0010162601626016261, D[2] = 0.006189090313015415, D[1]/D[2] = 4.007112463441553\n",
-      "dS = 1.5625, dt = 0.0002542588354945334, D[3] = 0.0015481142769550955, D[2]/D[3] = 3.9978252285021303\n",
-      "dS = 0.78125, dt = 6.357683260219975e-05, D[4] = 0.00038727100596361785, D[3]/D[4] = 3.997495947580783\n",
-      "dS = 0.390625, dt = 1.5894460780418023e-05, D[5] = 9.685664912022778e-05, D[4]/D[5] = 3.998393600039785\n",
-      "dS = 0.1953125, dt = 3.973630984784967e-06, D[6] = 2.4219532368794752e-05, D[5]/D[6] = 3.999113097865634\n",
-      "dS = 0.09765625, dt = 9.934107067819156e-07, D[7] = 6.055511025817835e-06, D[6]/D[7] = 3.9995852151096942\n",
-      "dS = 0.048828125, dt = 2.483526766954789e-07, D[8] = 1.5136766928072204e-06, D[7]/D[8] = 4.000531325211504\n"
+      "dS = 18.75, dt = 0.016129032258064516, D[0] = 0.057579132727204725\n",
+      "dS = 9.375, dt = 0.0040650406504065045, D[1] = 0.014613290438889176, D[0]/D[1] = 3.9401894438485945\n",
+      "dS = 4.6875, dt = 0.0010162601626016261, D[2] = 0.0034496991995214593, D[1]/D[2] = 4.236105698988574\n",
+      "dS = 2.34375, dt = 0.0002542588354945334, D[3] = 0.0008907138716071887, D[2]/D[3] = 3.8729600037516896\n",
+      "dS = 1.171875, dt = 6.357683260219975e-05, D[4] = 0.00021939909104541424, D[3]/D[4] = 4.059788339883397\n",
+      "dS = 0.5859375, dt = 1.5894460780418023e-05, D[5] = 5.530698537416469e-05, D[4]/D[5] = 3.966932740252033\n",
+      "dS = 0.29296875, dt = 3.973630984784967e-06, D[6] = 1.3775887029833104e-05, D[5]/D[6] = 4.014767633793142\n",
+      "dS = 0.146484375, dt = 9.934107067819156e-07, D[7] = 3.4514944212742107e-06, D[6]/D[7] = 3.9912818473417584\n",
+      "dS = 0.0732421875, dt = 2.483526766954789e-07, D[8] = 8.634700788511797e-07, D[7]/D[8] = 3.997236853726672\n"
      ]
     }
    ],
@@ -948,7 +967,7 @@
     "for i in range(numJVals):\n",
     "    jMax = jMaxVals[i]\n",
     "    iMax = int(ceil(jMax*jMax*stabilityRatio))\n",
-    "    S, fdV = EuroPutFD( iMax, jMax, X, T, r, sigma, delta, SuFactor = 4.0 ) # S_u = SuFactor * X\n",
+    "    S, fdV = EuroPutFD( iMax, jMax, X, T, r, sigma, delta, SuFactor = 6.0 ) # S_u = SuFactor * X\n",
     "    trueV = np.array( [EuroPut_exact(s, 0.0, X, T, r, sigma ) for s in S] )\n",
     "\n",
     "    dS = S[1] -  S[0]\n",
@@ -965,7 +984,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This experiment supports the view that a larger valueof $S_u$ permits greater accuracy."
+    "This experiment supports the view that a larger value of $S_u$ permits greater accuracy."
    ]
   },
   {
@@ -1014,6 +1033,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Interpolate with cubic splines\n",
     "import scipy\n",
     "\n",
     "V =  scipy.interpolate.CubicSpline(S, fdV)"
@@ -1023,7 +1043,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you can write `V(S0)` to estimate the value of $V(S, t=0)$ for any $S\\in[0,S_U]$. Although the interpolator will also produce estimates for values of $S$ that lie outside the original domain (extrapolation to $S>S_U$) it is not recommended to trust these estimates."
+    "Now you can use `V(S0)` to estimate the value of $V(S, t=0)$ for any $S\\in[0,S_U]$. Although the interpolator will also produce estimates for values of $S$ that lie outside the original domain (extrapolation to $S>S_U$) it is not recommended to trust these estimates."
    ]
   },
   {
