--- a/solutions/SLTN-lab-class-9.ipynb
+++ b/solutions/SLTN-lab-class-9.ipynb
@@ -15,7 +15,6 @@
    "source": [
     "# Lab Class - Week 9\n",
     "\n",
-    "## Dr P. V. Johnson\n",
     "## Department of Mathematics"
    ]
   },
@@ -786,9 +785,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -800,9 +799,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
