Added pictures fo Crank & Nicolson to lab notebook for Week 9

--- a/solutions/MATH60082-lab-solution-9.ipynb
+++ b/solutions/MATH60082-lab-solution-9.ipynb
@@ -33,7 +33,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Crank-Nicolson Method"
+    "## Crank-Nicolson Method\n",
+    "The algorithm now known as the [Crank-Nicolson method]() was develped by John Crank and Phyllis Nicolson at the University of Manchester during the 2nd World War. It later formed the third part of Nicolson's PhD thesis [*Three Problems in Theoretical Physics*](https://www.librarysearch.manchester.ac.uk/permalink/44MAN_INST/1r887gn/alma992979302376401631) and was \n",
+    "[published](https://doi.org/10.1017%2FS0305004100023197) in 1947.\n",
+    "<p float=\"left\">\n",
+    "    <img src=\"images/JohnCrank.jpg\" alt=\"John Crank\" width=\"40%\" height=\"auto\">\n",
+    "    <img src=\"images/PhyllisNicolson.jpg\" alt=\"Phyllis Nicolson\" width=\"40%\" height=\"auto\">\n",
+    "</p>\n",
+    "\n"
    ]
   },
   {
@@ -192,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Begin ny loading libraries that we'll need\n",
+    "# Begin by loading libraries that we'll need\n",
     "import scipy\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -263,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our matrix is very sparse, with entries on the main diagonal and on the diagonals immediately above and below the main ine, but nowhere else. This means that we can use  SciPy's `solve_banded()` function to solve $A \\boldsymbol{V^i} = \\boldsymbol{d^{i+1}}$.\n",
+    "Our matrix is very sparse, with entries on the main diagonal and on the diagonals immediately above and below the main diagonal, but nowhere else. This means that we can use  SciPy's `solve_banded()` function to solve $A \\boldsymbol{V^i} = \\boldsymbol{d^{i+1}}$.\n",
     "\n",
     "See the [scipy documentation](https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.solve_banded.html#scipy.linalg.solve_banded) for more details."
    ]
@@ -311,7 +318,6 @@
    ],
    "source": [
     "# Set up storage for the tri-diagonal matrix A\n",
-    "# A[0,j] willbe \n",
     "A_bands = np.zeros(shape=(3,jMax+1)) \n",
     "\n",
     "# Set up a tuple that described the bands in our matrix\n",
@@ -502,7 +508,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x115821520>"
+       "<matplotlib.legend.Legend at 0x1225f3d40>"
       ]
      },
      "execution_count": 9,
@@ -529,7 +535,7 @@
     "    S, V = EuroPutCN( iMax, jMax, X, T, r, sigma )\n",
     "    plt.plot( S, V, label=f'iMax = {iMax}, jMax = {jMax}' )\n",
     "\n",
-    "plt.plot( [X, X], [0, X], linestyle=\"dotted\" )\n",
+    "plt.plot( [X, X], [0, X], linestyle=\"dotted\" ) # Dotted vertical line at strike price\n",
     "plt.xlabel( \"$S$\" )\n",
     "plt.ylabel( \"$P(S, t=0)$\" )\n",
     "plt.title( \"European put\" )\n",
@@ -627,7 +633,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x124843d40>"
+       "<matplotlib.legend.Legend at 0x1273ccfb0>"
       ]
      },
      "execution_count": 12,
@@ -663,25 +669,48 @@
     "$$\n",
     "   D = \\left[ \\frac{1}{S_u} \\,\\int_0^{S_u} \\left( P(S,0) - P_{FD}(S,0) \\right)^2 \\, dS \\right]^{1/2}\n",
     "$$\n",
-    "where $P(S,0)$ is the analytic solution and $P_{FD}(S,0)$ is the finite-difference approximation."
+    "where $P(S,0)$ is the analytic solution and $P_{FD}(S,0)$ is the finite-difference approximation. The quantity is sometimes called the &ldquo;root-mean-square&rdquo; difference (or RMS difference, for short) between $P(S,0)$ and $P_{FD}(S,0)$.\n",
+    "\n",
+    "To understand the code below, consider a trapezoidal rule approximation to an integral like the one above:\n",
+    "$$\n",
+    "   \\frac{1}{S_u} \\,\\int_0^{S_u} f(S)\\, dS \n",
+    "   \\; \\approx \\; \\frac{1}{S_u} \\,\\sum_{j=0}^{J - 1} \\frac{\\Delta S}{2} \\left( f(S_j) + f(S_{j+1}) \\right)\n",
+    "$$\n",
+    "where $J = $ `jMax` is the number of steps, so $\\Delta S = S_u / J$. Thus\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "   \\frac{1}{S_u} \\, \\int_0^{S_u} f(S) \\, dS \n",
+    "        & \\approx \\frac{1}{S_u} \\, \\frac{\\Delta S}{2}  \\sum_{j=0}^{J - 1} \\left( f(S_j) + f(S_{j+1}) \\right) \\\\\n",
+    "        & \\approx \\frac{1}{S_u} \\, \\frac{S_u}{2 J} \\left( \\sum_{j=0}^{J - 1} f(S_j) + \\sum_{j=0}^{J - 1}f(S_{j+1}) \\right) \\\\\n",
+    "        & \\approx \\frac{1}{2J} \\, \\left( \\sum_{j=0}^{J - 1} f(S_j) + \\sum_{k=1}^{J}f(S_{k}) \\right) \\\\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "Most terms of the form $f(S_j)$ appear in both sums, but $f(S_0)$ appears only in the first one, while $f(S_J)$ appears only in the second one. Thus we can write\n",
+    "$$\n",
+    "    \\frac{1}{S_u} \\, \\int_0^{S_u} f(S) \\, dS \\; \\approx \\; \\frac{1}{J} \\sum_{j=0}^J f(S_j) - \\frac{1}{2J} \\left( f(S_0) + f(S_j)\\right).\n",
+    "$$\n",
+    "If we neglect the corrections for $f(S_0)$ and $f(S_J)$, we get the approximation implemented below\n",
+    "$$\n",
+    "    D \\approx \\left[ \\frac{1}{J} \\sum_{j=0}^{J} \\left( P(S_j,0) - P_{FD}(S_j,0) \\right)^2 \\right]^{1/2}\n",
+    "$$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iMax = 2048, jMax = 16, D = 0.005389580854060432\n",
-      "iMax = 2048, jMax = 32, D = 0.0013330855961711818\n",
-      "iMax = 2048, jMax = 64, D = 0.00033414549332978283\n",
-      "iMax = 2048, jMax = 128, D = 8.478056049660488e-05\n",
-      "iMax = 2048, jMax = 256, D = 2.497593175659266e-05\n",
-      "iMax = 2048, jMax = 512, D = 1.44970839736264e-05\n",
-      "iMax = 2048, jMax = 1024, D = 1.3527945123577475e-05\n"
+      "iMax = 2048, jMax = 16, D = 0.017792850743957197\n",
+      "iMax = 2048, jMax = 32, D = 0.0038683565505200114\n",
+      "iMax = 2048, jMax = 64, D = 0.0009498303438350022\n",
+      "iMax = 2048, jMax = 128, D = 0.0002370008533437693\n",
+      "iMax = 2048, jMax = 256, D = 5.9280817286425855e-05\n",
+      "iMax = 2048, jMax = 512, D = 1.4829161722956072e-05\n",
+      "iMax = 2048, jMax = 1024, D = 3.7085395080120566e-06\n"
      ]
     }
    ],
@@ -698,7 +727,7 @@
     "for i in range(numVals):\n",
     "    jMax = int(ijMaxVals[i])\n",
     "    iMax = 2048\n",
-    "    S, cnV = EuroPutCN( iMax, jMax, X, T, r, sigma, 4.0 )\n",
+    "    S, cnV = EuroPutCN( iMax, jMax, X, T, r, sigma, 8.0 )\n",
     "    trueV = np.array( [EuroPut_exact(s, 0.0, X, T, r, sigma ) for s in S] )\n",
     "    rmsErrorVals[i] = rmsError( cnV, trueV )\n",
     "    print( f'iMax = {iMax}, jMax = {jMax}, D = {rmsErrorVals[i]}' ) "
@@ -713,21 +742,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[4.042936829818057,\n",
-       " 3.989536362998322,\n",
-       " 3.941298469513704,\n",
-       " 3.39449039670867,\n",
-       " 1.7228245212643967,\n",
-       " 1.0716397679910632]"
+       "[4.599589130832668,\n",
+       " 4.0726815853253,\n",
+       " 4.007708539586037,\n",
+       " 3.9979349845778502,\n",
+       " 3.997583841482896,\n",
+       " 3.998652755597895]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,33 +769,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can do a similar experiment with large `jMax` and varying `iMax`. Here I've used $S_U = 8X$ to reduce errors from grid truncation even further."
+    "We can do a similar experiment with large `jMax` and varying `iMax`. Here I've used $S_U = 16X$ to reduce errors from grid truncation even further."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iMax = 16, jMax = 16384, D = 0.00013169003231093405\n",
-      "iMax = 32, jMax = 16384, D = 4.660215869123289e-05\n",
-      "iMax = 64, jMax = 16384, D = 1.6606187558930094e-05\n",
-      "iMax = 128, jMax = 16384, D = 6.039850605741664e-06\n",
-      "iMax = 256, jMax = 16384, D = 2.251090815339817e-06\n",
-      "iMax = 512, jMax = 16384, D = 6.741530388315349e-07\n",
-      "iMax = 1024, jMax = 16384, D = 4.3649954738428145e-08\n"
+      "iMax = 16, jMax = 65536, D = 9.306858862429882e-05\n",
+      "iMax = 32, jMax = 65536, D = 3.28796965301636e-05\n",
+      "iMax = 64, jMax = 65536, D = 1.164219063226677e-05\n",
+      "iMax = 128, jMax = 65536, D = 4.150070929134977e-06\n",
+      "iMax = 256, jMax = 65536, D = 1.5097355958044945e-06\n",
+      "iMax = 512, jMax = 65536, D = 5.627470063837508e-07\n",
+      "iMax = 1024, jMax = 65536, D = 1.6852356215935165e-07\n"
      ]
     }
    ],
    "source": [
     "for i in range(numVals):\n",
-    "    jMax = 4*4096 \n",
+    "    jMax = 16*4096 \n",
     "    iMax = int(ijMaxVals[i])\n",
-    "    S, cnV = EuroPutCN( iMax, jMax, X, T, r, sigma, 8.0 )\n",
+    "    S, cnV = EuroPutCN( iMax, jMax, X, T, r, sigma, 16.0 )\n",
     "    trueV = np.array( [EuroPut_exact(s, 0.0, X, T, r, sigma ) for s in S] )\n",
     "    rmsErrorVals[i] = rmsError( cnV, trueV )\n",
     "    print( f'iMax = {iMax}, jMax = {jMax}, D = {rmsErrorVals[i]}' ) "
@@ -774,12 +803,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2.83057930716965,\n",
+       " 2.824184689008294,\n",
+       " 2.8052991939329144,\n",
+       " 2.748872677221023,\n",
+       " 2.682796316423173,\n",
+       " 3.33927789783859]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[rmsErrorVals[i] / rmsErrorVals[i+1] for i in range(numVals-1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "[rmsErrorVals[i] / rmsErrorVals[i+1] for i in range(numJVals-1)]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -795,10 +847,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.00000000e+00, -1.11022302e-16,  0.00000000e+00,  0.00000000e+00,\n",
+       "        0.00000000e+00])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "from numba import njit\n",
     "# Define and accelerate a Crank-Nicolson solver that uses\n",
     "# the Thomas tridiagonal solver instead of solve_banded().\n",
     "\n",
@@ -818,11 +883,7 @@
     "    # Set up storage for the results and intermediates\n",
     "    vNew = np.zeros(jMax+1)\n",
     "    vOld = np.zeros(jMax+1)\n",
-    "    \n",
-    "    cPrime = np.zeros(jMax) # Thomas solver\n",
-    "    dPrime = np.zeros(jMax) # Thomas solver\n",
     "\n",
-    "    \n",
     "    # Record the value of the option at expiry\n",
     "    vOld = np.array([max(X - S[j], 0.0) for j in range(jMax+1)])\n",
     "\n",
@@ -867,6 +928,9 @@
     "        # Solve Av = d using a Thomas solver:\n",
     "        # https://en.wikipedia.org/wiki/Tridiagonal_matrix_algorithm\n",
     "        #################################################\n",
+    "        cPrime = np.zeros(jMax) \n",
+    "        dPrime = np.zeros(jMax) \n",
+    "    \n",
     "        cPrime[0] = A_diags[0,2] / A_diags[0,1] # c_0 / b_0\n",
     "        dPrime[0] = d[0] / A_diags[0,1] # d_0 / b_0\n",
     "        for j in range(1,jMax):\n",
@@ -881,8 +945,8 @@
     "        dp_numerator = d[jMax] - A_diags[jMax,0]*dPrime[jMax-1] \n",
     "        dp_denom = A_diags[jMax,1] - A_diags[jMax,0]*cPrime[jMax-1]\n",
     "        dPrime[jMax] = dp_numerator / dp_denom\n",
-    "    \n",
-    "        # Now obtain the result via back-substitution, storing it\n",
+    "\n",
+    "        # Obtain the result via back-substitution, storing it\n",
     "        # in vNew[].\n",
     "        vNew[jMax] = dPrime[jMax]\n",
     "        for j in range(jMax-1, -1, -1):\n",
@@ -905,9 +969,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 repetitions of EuroPutCN() took 4.51 seconds.\n",
+      "100 repetitions of EuroPutCN2() took 0.0732 seconds.\n",
+      "That's a speedup by a factor of around 62.\n"
+     ]
+    }
+   ],
    "source": [
     "# Do some timing experiments\n",
     "from timeit import timeit\n",
