--- a/MATH60082-lecture-Quadrature.ipynb
+++ b/MATH60082-lecture-Quadrature.ipynb
@@ -40,10 +40,10 @@
     "Next make the following standard\n",
     "transformations                \n",
     "$$\n",
-    "x = log(S_0),\n",
+    "x = \\log(S_0),\n",
     "$$\n",
     "$$\n",
-    "y = log(S_{T}).\n",
+    "y = \\log(S_{T}).\n",
     "$$\n",
     "The final conditions for a European option expiring at time $T$\n",
     "with  $V(y,T)$ are transformed in straightforward fashion; e.g. \n",
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy\n",
+    "import numpy as np\n",
     "import scipy\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -123,7 +123,7 @@
    "source": [
     "# the function A\n",
     "def A_func( x, r, sigma, k, dt):\n",
-    "    return 1. / numpy.sqrt(2 * sigma*sigma*numpy.pi*dt) * numpy.exp(-0.5*k*x - 0.125*sigma*sigma*k*k*dt - r*dt)"
+    "    return 1. / np.sqrt(2 * sigma*sigma*np.pi*dt) * np.exp(-0.5*k*x - 0.125*sigma*sigma*k*k*dt - r*dt)"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "source": [
     "# the function B\n",
     "def B_func( x,  y,  sigma,  k,  dt):\n",
-    "    return numpy.exp(-(x - y)*(x - y) / (2.*sigma*sigma*dt) + 0.5 * k * y)"
+    "    return np.exp(-(x - y)*(x - y) / (2.*sigma*sigma*dt) + 0.5 * k * y)"
    ]
   },
   {
@@ -152,11 +152,11 @@
     "\n",
     "We first set up the grid over the interval by applying a log transform\n",
     "$$\n",
-    "x = log(S_0)\n",
+    "x = \\log(S_0)\n",
     "$$\n",
     "and for the $y$ variable at $T$ for a call option we use\n",
     "$$\n",
-    "y \\in [ log(X) , log (X) + \\xi \\sigma T ] ,\n",
+    "y \\in [ \\log(X) , \\log (X) + \\xi \\sigma \\sqrt{T} ] ,\n",
     "$$\n",
     "where $\\xi$ is some grid scale factor set large enough to capture the value of the option.\n",
     "After the variable $k$ is assigned, we can generate values of the integrand, $f_j$\n",
@@ -209,9 +209,9 @@
     "xi=10.0\n",
     "    \n",
     "# now get value of x at time t=0\n",
-    "x = numpy.log(S0)\n",
+    "x = np.log(S0)\n",
     "# and setup the vector y\n",
-    "y = numpy.linspace(numpy.log(X),numpy.log(X)+ 10*sigma*numpy.sqrt(T),N+1)\n",
+    "y = np.linspace(np.log(X),np.log(X)+ 10*sigma*np.sqrt(T),N+1)\n",
     "    "
    ]
   },
@@ -242,11 +242,11 @@
     "           \n",
     "# setup vectors to store option values, and integrand function\n",
     "# these vectors must be the same size as the y vector\n",
-    "f = numpy.zeros(N+1)\n",
+    "f = np.zeros(N+1)\n",
     "    \n",
     "for j in range(N+1):\n",
     "    # note here that $y_j>\\log(X)$ so the option is always exercised\n",
-    "    f[j] = B_func( x , y[j] , sigma , kStar , T ) * (numpy.exp(y[j]) - X)\n",
+    "    f[j] = B_func( x , y[j] , sigma , kStar , T ) * (np.exp(y[j]) - X)\n",
     "    \n",
     "# now use scipy to do a Simpsons rule integration\n",
     "# first get the fixed space inbetween points in y\n",
@@ -270,20 +270,20 @@
    "source": [
     "def  callOption( S0, X, r, Dc, sigma, T, N, xi):\n",
     "    # now get value of x at time t=0\n",
-    "    x = numpy.log(S0)\n",
+    "    x = np.log(S0)\n",
     "    # and setup the vector y\n",
-    "    y = numpy.linspace(numpy.log(X),numpy.log(X)+ 10*sigma*numpy.sqrt(T),N+1)\n",
+    "    y = np.linspace(np.log(X),np.log(X)+ 10*sigma*np.sqrt(T),N+1)\n",
     "        \n",
     "    # variable k\n",
     "    kStar = 2.*(r - Dc) / sigma / sigma - 1.\n",
     "            \n",
     "    # setup vectors to store option values, and integrand function\n",
     "    # these vectors must be the same size as the y vector\n",
-    "    f = numpy.zeros(N+1)\n",
+    "    f = np.zeros(N+1)\n",
     "        \n",
     "    for j in range(N+1):\n",
     "        # note here that $y_j>\\log(X)$ so the option is always exercised\n",
-    "        f[j] = B_func( x , y[j] , sigma , kStar , T ) * (numpy.exp(y[j]) - X)\n",
+    "        f[j] = B_func( x , y[j] , sigma , kStar , T ) * (np.exp(y[j]) - X)\n",
     "        \n",
     "    # now use scipy to do a Simpsons rule integration\n",
     "    # first get the fixed space inbetween points in y\n",
@@ -345,9 +345,9 @@
     "    diff = value - valueOld\n",
     "    R = diffOld/diff\n",
     "    if k<2:\n",
-    "        convrate=numpy.nan\n",
+    "        convrate=np.nan\n",
     "    else:\n",
-    "        convrate=numpy.log(R)/numpy.log(ratio)\n",
+    "        convrate=np.log(R)/np.log(ratio)\n",
     "    print(f\"|{n:10d}|{value:10.3f}|{R:10.3f}|{convrate:10.3f}|\")\n",
     "    valueOld = value\n",
     "    diffOld = diff\n",
@@ -358,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can see the power of this method, since we use integration and the simpsons rule we are able to get 4th order convergence,\n",
+    "Now we can see the power of this method, since we use integration and Simpson's rule we are able to get 4th order convergence,\n",
     "$$\n",
     "V^N = V^\\text{exact} + O\\left(N^{-4}\\right) ,\n",
     "$$\n",
@@ -369,9 +369,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example -- Up and Out Barrier Call Option\n",
+    "## Example &mdash; Up and Out Barrier Call Option\n",
     "\n",
-    "This is nice but we already have an analytic solution to this problem. How about something more complicated? The discretely observed up-and-out barrier call option is a problem that can't easily be solved with standard techniques such as Monte-Carlo or Lattice methods. However this problem is uniquely adaptable to quadrature methods, given that  we know at each observation time point $t_k$ the value of the function becomes zero, the region over which this happens can be split out and set to zero.\n",
+    "This is nice, but we already have an analytic solution to this problem. How about something more complicated? The discretely observed up-and-out barrier call option is a problem that can't easily be solved with standard techniques such as Monte-Carlo or Lattice methods. However this problem is uniquely adaptable to quadrature methods, given that  we know at each observation time point $t_k$ the value of the function becomes zero, the region over which this happens can be split out and set to zero.\n",
     "\n",
     "To see how to solve this method using quadrature, the best way is to first observe how the grid adapts to the problem through time. Consider an up and out barrier call option observed at equally spaced times $t_k=k\\Delta t$ such that $$\\Delta t = \\frac{T}{K}.$$ The payoff for the option is given by\n",
     "$$\n",
@@ -381,19 +381,19 @@
     "$$\n",
     "V(S,t_k) = 0 \\text{ if } S>B \\text{ for } k=0,1,\\dots K-1 .\n",
     "$$\n",
-    "At the terminal time, as before apply a log transform so that the $y$ variable at $T$ becomes\n",
+    "At the terminal time, as above, we apply a log transform so that the $y$ variable at $T$ becomes\n",
     "$$\n",
-    "y \\in [ log(X) ,  log (X) + \\xi \\sigma T ] .\n",
+    "y \\in [ \\log(X) ,  \\log(X) + \\xi \\sigma \\sqrt{T} ] .\n",
     "$$\n",
     "\n",
     "Now for the $x$ grid, this is set at $t=t_{K-1}$, and we use the fact that $V$ is zero above the barrier to ignore any point above $S>B$, therefore\n",
     "$$\n",
-    "x \\in [  log(S_0) - \\xi \\sigma sqrt(T) , log(B) ] .\n",
+    "x \\in [  \\log(S_0) - \\xi \\sigma \\sqrt{T} , \\log(B) ] .\n",
     "$$\n",
     "\n",
-    "The lower boundary here is calculated to be sufficiently small such that $B( log(S_0), y_\\text{min} , t_k )V(y_\\text{min},t_k) = 0 $ for $y<y_\\text{min}$.\n",
+    "The lower boundary here is calculated to be sufficiently small such that $B( \\log(S_0), y_\\text{min} , t_k )V(y_\\text{min},t_k) = 0 $ for $y<y_\\text{min}$.\n",
     "\n",
-    "The grids follow this pattern through time until we arrive at the last step, at which point we will wish to calculate $x_0 =  log(S_0)$."
+    "The grids follow this pattern through time until we arrive at the last step, at which point we will wish to calculate $x_0 =  \\log(S_0)$."
    ]
   },
   {
@@ -422,7 +422,7 @@
     "xi=1.\n",
     "    \n",
     "# first setup a time grid\n",
-    "t = numpy.linspace(0.0,T,num=K+1)"
+    "t = np.linspace(0.0,T,num=K+1)"
    ]
   },
   {
@@ -438,8 +438,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = numpy.linspace(numpy.log(X),numpy.log(X)+ xi*sigma*numpy.sqrt(t[K]),num=N+1)\n",
-    "x = numpy.linspace(numpy.log(S0)-xi*sigma*numpy.sqrt(t[K-1]),numpy.log(B),num=N+1)"
+    "y = np.linspace(np.log(X),np.log(X)+ xi*sigma*np.sqrt(t[K]),num=N+1)\n",
+    "x = np.linspace(np.log(S0)-xi*sigma*np.sqrt(t[K-1]),np.log(B),num=N+1)"
    ]
   },
   {
@@ -475,7 +475,7 @@
     "    nodeColour = colours[ i%7 ]\n",
     "    for j in range(N+1):\n",
     "        plot_line_x = [ t[K-1] ,t[K] ]\n",
-    "        plot_line_y = [ numpy.exp(x[i]) , numpy.exp(y[j]) ]\n",
+    "        plot_line_y = [ np.exp(x[i]) , np.exp(y[j]) ]\n",
     "        plt.plot(plot_line_x,plot_line_y,color = nodeColour)"
    ]
   },
@@ -509,42 +509,42 @@
     "plt.ylabel(\"S\")\n",
     "\n",
     "# setup grid nodes at final step\n",
-    "y = numpy.linspace(numpy.log(X),numpy.log(X)+ xi*sigma*numpy.sqrt(t[K]),num=N+1)\n",
-    "x = numpy.linspace(numpy.log(S0)-xi*sigma*numpy.sqrt(t[K-1]),numpy.log(B),num=N+1)\n",
+    "y = np.linspace(np.log(X),np.log(X)+ xi*sigma*np.sqrt(t[K]),num=N+1)\n",
+    "x = np.linspace(np.log(S0)-xi*sigma*np.sqrt(t[K-1]),np.log(B),num=N+1)\n",
     "# plot the grid nodes on the final step\n",
     "for i in range(N+1):\n",
     "    nodeColour = colours[ i%7 ]\n",
     "    for j in range(N+1):\n",
     "        plot_line_x = [ t[K-1] ,t[K] ]\n",
-    "        plot_line_y = [ numpy.exp(x[i]) , numpy.exp(y[j]) ]\n",
+    "        plot_line_y = [ np.exp(x[i]) , np.exp(y[j]) ]\n",
     "        plt.plot(plot_line_x,plot_line_y,color = nodeColour)\n",
     "        \n",
     "# to move backwards through grid, copy x values onto the \"y\" grid,\n",
-    "y = numpy.copy(x)\n",
+    "y = np.copy(x)\n",
     "\n",
     "# now move back through time\n",
     "for k in range(K-2,0,-1):\n",
     "    # and the x grid at t=t_{k}, now using the barrier as the upper limit and S0 at the lower limit\n",
-    "    x = numpy.linspace(numpy.log(S0)-xi*sigma*numpy.sqrt(t[k]),numpy.log(B),num=N+1)\n",
+    "    x = np.linspace(np.log(S0)-xi*sigma*np.sqrt(t[k]),np.log(B),num=N+1)\n",
     "\n",
     "    # plot the grid nodes on the final step\n",
     "    for i in range(N+1):\n",
     "        nodeColour = colours[ i%7 ]\n",
     "        for j in range(N+1):\n",
     "            plot_line_x = [ t[k] ,t[k+1] ]\n",
-    "            plot_line_y = [ numpy.exp(x[i]) , numpy.exp(y[j]) ]\n",
+    "            plot_line_y = [ np.exp(x[i]) , np.exp(y[j]) ]\n",
     "            plt.plot(plot_line_x,plot_line_y,color = nodeColour)\n",
     "    # overwrite the y values with x\n",
-    "    y = numpy.copy(x)\n",
+    "    y = np.copy(x)\n",
     "\n",
     "# and at the final step, x = x0 at t=t_{0}, \n",
-    "x = numpy.linspace(numpy.log(S0),numpy.log(S0),num=1)\n",
+    "x = np.linspace(np.log(S0),np.log(S0),num=1)\n",
     "\n",
     "for i in range( len(x) ):\n",
     "    nodeColour = colours[ i%7 ]\n",
     "    for j in range(N+1):\n",
     "        plot_line_x = [ t[0] ,t[1] ]\n",
-    "        plot_line_y = [ numpy.exp(x[i]) , numpy.exp(y[j]) ]\n",
+    "        plot_line_y = [ np.exp(x[i]) , np.exp(y[j]) ]\n",
     "        plt.plot(plot_line_x,plot_line_y,color = nodeColour)\n"
    ]
   },
@@ -569,18 +569,18 @@
     "def barrierCallOption(S0,X,r,Dc,sigma,T ,K,B,N,xi):\n",
     "\n",
     "    # first setup a time grid\n",
-    "    t = numpy.linspace(0.0,T,num=K+1)\n",
+    "    t = np.linspace(0.0,T,num=K+1)\n",
     "        \n",
     "    # setup grid nodes at final step\n",
-    "    y = numpy.linspace(numpy.log(X),numpy.log(X)+ xi*sigma*numpy.sqrt(t[K]),num=N+1)\n",
-    "    x = numpy.linspace(numpy.log(S0)-xi*sigma*numpy.sqrt(t[K-1]),numpy.log(B),num=N+1)\n",
+    "    y = np.linspace(np.log(X),np.log(X)+ xi*sigma*np.sqrt(t[K]),num=N+1)\n",
+    "    x = np.linspace(np.log(S0)-xi*sigma*np.sqrt(t[K-1]),np.log(B),num=N+1)\n",
     "    \n",
     "    # store values for the option \n",
-    "    vNew = numpy.zeros(N+1)\n",
-    "    vOld = numpy.zeros(N+1)\n",
+    "    vNew = np.zeros(N+1)\n",
+    "    vOld = np.zeros(N+1)\n",
     "    \n",
     "    for j in range(N+1):\n",
-    "        vOld[j] = numpy.exp(y[j]) - X\n",
+    "        vOld[j] = np.exp(y[j]) - X\n",
     "    \n",
     "    # calculate the option values at x_i\n",
     "    for i in range(N+1):\n",
@@ -589,7 +589,7 @@
     "\n",
     "        # setup vectors to store option values, and integrand function\n",
     "        # these vectors must be the same size as the y vector\n",
-    "        f = numpy.zeros(N+1)\n",
+    "        f = np.zeros(N+1)\n",
     "            \n",
     "        for j in range(N+1):\n",
     "            # note here that $y_j>\\log(X)$ so the option is always exercised\n",
@@ -602,13 +602,13 @@
     "        vNew[i] = A_func(x[i], r, sigma, kStar, T - t[K-1] )*scipy.integrate.simpson(y=f,dx=y[1]-y[0])       \n",
     "    \n",
     "    # overwrite the y values with x\n",
-    "    y = numpy.copy(x);\n",
-    "    vOld = numpy.copy(vNew);\n",
+    "    y = np.copy(x);\n",
+    "    vOld = np.copy(vNew);\n",
     "    \n",
     "    # now move back through time\n",
     "    for k in range(K-2,0,-1):\n",
     "        # and the x grid at t=t_{k}, now using the barrier as the upper limit and S0 at the lower limit\n",
-    "        x = numpy.linspace(numpy.log(S0)-xi*sigma*numpy.sqrt(t[k]),numpy.log(B),num=N+1)\n",
+    "        x = np.linspace(np.log(S0)-xi*sigma*np.sqrt(t[k]),np.log(B),num=N+1)\n",
     "        \n",
     "        # calculate value at every grid node at t[k]\n",
     "        for i in range(N+1):\n",
@@ -617,7 +617,7 @@
     "\n",
     "            # setup vectors to store option values, and integrand function\n",
     "            # these vectors must be the same size as the y vector\n",
-    "            f = numpy.zeros(N+1)\n",
+    "            f = np.zeros(N+1)\n",
     "                \n",
     "            for j in range(N+1):\n",
     "                # note here that $y_j>\\log(X)$ so the option is always exercised\n",
@@ -631,18 +631,18 @@
     "        \n",
     "\n",
     "        # overwrite the y values with x\n",
-    "        y = numpy.copy(x)\n",
+    "        y = np.copy(x)\n",
     "        # and old with new\n",
-    "        vOld = numpy.copy(vNew)\n",
+    "        vOld = np.copy(vNew)\n",
     "    \n",
     "    # and at the final step, x = x0 at t=t_{0}, \n",
-    "    x = numpy.linspace(numpy.log(S0),numpy.log(S0),num=1)\n",
+    "    x = np.linspace(np.log(S0),np.log(S0),num=1)\n",
     "    # variable k\n",
     "    kStar = 2.*(r-Dc) / sigma / sigma - 1.;\n",
     "\n",
     "    # setup vectors to store option values, and integrand function\n",
     "    # these vectors must be the same size as the y vector\n",
-    "    f = numpy.zeros(N+1)\n",
+    "    f = np.zeros(N+1)\n",
     "        \n",
     "    for j in range(N+1):\n",
     "        # note here that $y_j>\\log(X)$ so the option is always exercised\n",
@@ -716,9 +716,9 @@
     "    diff = value - valueOld\n",
     "    R = diffOld/diff\n",
     "    if k<3:\n",
-    "        convrate=numpy.nan\n",
+    "        convrate=np.nan\n",
     "    else:\n",
-    "        convrate=numpy.log(R)/numpy.log(ratio)\n",
+    "        convrate=np.log(R)/np.log(ratio)\n",
     "    print(f\"|{n:10d}|{value:10.6f}|{R:10.3f}|{convrate:10.3f}|\")\n",
     "    valueOld = value\n",
     "    diffOld = diff"
