Added material to the solutions for Week 10

--- a/solutions/MATH60082-lab-solution-10.ipynb
+++ b/solutions/MATH60082-lab-solution-10.ipynb
@@ -201,7 +201,7 @@
     "- Run the American option for different value of $iMax$ and $jMax$, is this method stable for all values of $iMax$?\n",
     "- Using the calculated value at $S_0=X$, a sufficiently large $S^U$, and a stable value of $iMax$, verify that the convergence rate is $O((\\Delta S)^2)$.\n",
     "- Use interpolation to get the value of the option with $S_0=9.735$, is the convergence rate still $O((\\Delta S)^2)$?\n",
-    "- Check that the converged value matches with the result on my website:\n",
+    "- Check that the converged value matches with the result on Paul Johnson's website:\n",
     "\n",
     "[American Option Solver](https://personalpages.manchester.ac.uk/staff/paul.johnson-2/pages/americanCalculator.html)"
    ]
@@ -497,7 +497,7 @@
     "- Using interpolation to calculate the value at $S_0=X$ and with $S^U=50$, and different values of `iMax` and `jMax`, verify the convergence rate of this algorithm is $O((\\Delta t)^2,(\\Delta S)^2)$.\n",
     "- Try using Richardson extrapolation to improve your calculated results.\n",
     "- Using interpolation to calculate the value at $S_0=9.735$, is the convergence rate still $O((\\Delta t)^2,(\\Delta S)^2)$?\n",
-    "- What is the efficincy of this method compared to the previous one? Say we want 6 digits of accuracy for the option value, which method can calculate it quicker? Can you use `numba` to compile and speed up your code where possible?\n",
+    "- What is the efficiency of this method compared to the previous one? Say we want 6 digits of accuracy for the option value, which method can calculate it quicker? Can you use `numba` to compile and speed up your code where possible?\n",
     "- Update this code to include dividends, and make it solve for a call option. \n"
    ]
   },
@@ -733,6 +733,27 @@
     "\n",
     "ratio = CN_time/CN2_time\n",
     "print( f\"That's a speedup by a factor of around {ratio:.1f}.\" )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Afterword: other approaches and further reading\n",
+    "\n",
+    "In addition ot the penalty method outlined above, one can also value American options using:\n",
+    "* Projected Successive Overrelaxation (PSOR), which is described on pages 85&ndash;87 of the lecture notes for this course, as well as in Sections&nbsp;9.3&nbsp;9.5 of\n",
+    "> P Wilmott, S Howison and J Dewynne (2012), [*The Mathematic of Financial Derivatives: A Student Introduction*](https://www-cambridge-org.manchester.idm.oclc.org/core/books/mathematics-of-financial-derivatives/7121345D07C5BCE4FBEC91A8A7E6F267), CUP.\n",
+    "\n",
+    "* The Binomial method, as discussed on pages 59&ndash;60 of the lecture notes, as well as in Chapter&nbsp;10 (especially Section&nbsp;10.5) of the book by Wilmott *et al.* and Section&nbsp;18.4 of\n",
+    "  > D Higham (2004), [In Introduction to Financial Option Valuation](https://www-cambridge-org.manchester.idm.oclc.org/core/books/an-introduction-to-financial-option-valuation/83492383DC3DCEC5E25B6FB80C00106E), CUP.\n",
+    "\n",
+    "* Higham's book also contains a good account, in Section&nbsp;18.4, of why the value $P_A(S,t)$ of an American put option doesn't obey the Black-Scholes PDE, but instead satisfies the inequality\n",
+    "$$\n",
+    "\\frac{\\partial P_A}{\\partial t} + \\frac{1}{2} \\sigma^2 S^2 \\frac{\\partial^2 P_A}{\\partial S^2}\n",
+    "+ rS\\frac{\\partial P_A}{\\partial S} -r P_A \\leq 0.\n",
+    "$$\n",
+    "Similar material appears in Chapter&nbsp;7 of the book by Wilmott *et al.*"
    ]
   },
   {
