Dealt with a warning in SLTN-lab-class-10

--- a/solutions/SLTN-lab-class-10.ipynb
+++ b/solutions/SLTN-lab-class-10.ipynb
@@ -74,9 +74,11 @@
    "outputs": [],
    "source": [
     "# To get started import some libraries\n",
-    "import numpy\n",
+    "import numpy as np\n",
     "import scipy\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from math import fabs, exp"
    ]
   },
   {
@@ -97,10 +99,10 @@
     "    dS = float(SU) / int(jmax)\n",
     "    dt = float(T) / int(imax)\n",
     "\n",
-    "    S = numpy.zeros(int(jmax)+1)\n",
-    "    t = numpy.zeros(int(imax)+1)\n",
-    "    vNew = numpy.zeros(int(jmax)+1)\n",
-    "    vOld = numpy.zeros(int(jmax)+1)\n",
+    "    S = np.zeros(int(jmax)+1)\n",
+    "    t = np.zeros(int(imax)+1)\n",
+    "    vNew = np.zeros(int(jmax)+1)\n",
+    "    vOld = np.zeros(int(jmax)+1)\n",
     "\n",
     "    # calculate the values of S_j and t^i and check they work as expected\n",
     "    for j in range(jmax+1):\n",
@@ -131,7 +133,7 @@
     "        \n",
     "        # set old values equal to new ones\n",
     "        # MAKE SURE THIS IS A DEEP COPY!\n",
-    "        vOld = numpy.copy(vNew)\n",
+    "        vOld = np.copy(vNew)\n",
     "    \n",
     "    return S,vNew"
    ]
@@ -147,10 +149,10 @@
     "    dS = SU / jmax\n",
     "    dt = T / imax\n",
     "\n",
-    "    S = numpy.zeros(jmax+1)\n",
-    "    t = numpy.zeros(imax+1)\n",
-    "    vNew = numpy.zeros(jmax+1)\n",
-    "    vOld = numpy.zeros(jmax+1)\n",
+    "    S = np.zeros(jmax+1)\n",
+    "    t = np.zeros(imax+1)\n",
+    "    vNew = np.zeros(jmax+1)\n",
+    "    vOld = np.zeros(jmax+1)\n",
     "\n",
     "    # calculate the values of S_j and t^i and check they work as expected\n",
     "    for j in range(jmax+1):\n",
@@ -167,7 +169,7 @@
     "    # next loop back through time\n",
     "    for i in range(imax-1,-1,-1):\n",
     "        # apply boundary condition at S=0\n",
-    "        vNew[0] = X*numpy.exp(-r*(T-i*dt))\n",
+    "        vNew[0] = X*exp(-r*(T-i*dt))\n",
     "        for j in range(1,jmax):\n",
     "            # input explicit finite difference formula\n",
     "            A = 0.5*sigma*sigma*j*j*dt + 0.5*r*j*dt\n",
@@ -180,7 +182,7 @@
     "        \n",
     "        # set old values equal to new ones\n",
     "        # MAKE SURE THIS IS A DEEP COPY!\n",
-    "        vOld = numpy.copy(vNew)\n",
+    "        vOld = np.copy(vNew)\n",
     "    \n",
     "    return S,vNew"
    ]
@@ -193,7 +195,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x127d95460>]"
+       "[<matplotlib.lines.Line2D at 0x117d76de0>]"
       ]
      },
      "execution_count": 4,
@@ -279,7 +281,7 @@
    "source": [
     "S,vAmerican = finiteDiff_AmericanPut(X,T, r ,sigma,5*X,1000,50)\n",
     " \n",
-    "print( \"V(S_0=X,t=0)=\", numpy.interp( X , S , vAmerican ) )"
+    "print( \"V(S_0=X,t=0)=\", np.interp( X , S , vAmerican ) )"
    ]
   },
   {
@@ -317,8 +319,8 @@
      "output_type": "stream",
      "text": [
       "10 0.0 -1.0\n",
-      "20 0.0 -inf\n",
-      "40 0.0 nan\n",
+      "20 0.0 diff = 0.0\n",
+      "40 0.0 diff = 0.0\n",
       "80 1.0946165432300548e+19 0.0\n",
       "160 4.0407918830793335e+41 2.708915912778684e-23\n",
       "320 2.5546425526895203e+95 1.5817445297093322e-54\n",
@@ -330,16 +332,6 @@
       "20480 1.363333724545926 2.001899012734321\n",
       "40960 1.3633273792771363 2.002058382053706\n",
       "81920 1.3633242068913263 2.0001567178989443\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/v8/wf2x6lgh8xj5nh006s7bngz80000gs/T/ipykernel_69056/50814272.py:14: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  print( imax , value , diffOld/diff )\n",
-      "/var/folders/v8/wf2x6lgh8xj5nh006s7bngz80000gs/T/ipykernel_69056/50814272.py:14: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  print( imax , value , diffOld/diff )\n"
      ]
     }
    ],
@@ -355,9 +347,13 @@
     "for k in range(0,14):\n",
     "    imax = 10* 2**k\n",
     "    S,vAmerican = finiteDiff_AmericanPut_njit(X,T, r , sigma,SU,imax,jmax)\n",
-    "    value =  numpy.interp( X , S , vAmerican )\n",
+    "    value =  np.interp( X , S , vAmerican )\n",
     "    diff = value - valueOld\n",
-    "    print( imax , value , diffOld/diff )\n",
+    "    if( fabs(diff) > 0.0 ):\n",
+    "        print( imax , value , diffOld/diff )\n",
+    "    else:\n",
+    "        print( imax, value, \"diff = 0.0\" )\n",
+    "        \n",
     "    diffOld = diff\n",
     "    valueOld = value"
    ]
@@ -408,7 +404,7 @@
     "for k in range(0,5):\n",
     "    jmax = 10* 2**k\n",
     "    S,vAmerican = finiteDiff_AmericanPut_njit(X,T, r , sigma,SU,imax,jmax)\n",
-    "    value =  numpy.interp( X , S , vAmerican )\n",
+    "    value =  np.interp( X , S , vAmerican )\n",
     "    diff = value - valueOld\n",
     "    print( imax ,jmax, value , diffOld/diff )\n",
     "    diffOld = diff\n",
@@ -476,7 +472,7 @@
     "    jmax = 10* 2**k\n",
     "    imax = int(sigma*sigma*T*jmax*jmax)\n",
     "    S,vAmerican = finiteDiff_AmericanPut_njit(X,T, r , sigma,SU,imax,jmax)\n",
-    "    value =  numpy.interp( X , S , vAmerican )\n",
+    "    value =  np.interp( X , S , vAmerican )\n",
     "    diff = value - valueOld\n",
     "    print( imax,jmax , value , (4.*value - valueOld) /3. )\n",
     "    diffOld = diff\n",
@@ -535,7 +531,7 @@
     "    jmax = 10* 2**k\n",
     "    imax = int(sigma*sigma*T*jmax*jmax)\n",
     "    S,vAmerican = finiteDiff_AmericanPut_njit(X,T, r , sigma,SU,imax,jmax)\n",
-    "    value =  numpy.interp( X , S , vAmerican )\n",
+    "    value =  np.interp( X , S , vAmerican )\n",
     "    diff = value - valueOld\n",
     "    print( imax,jmax , value , (4.*value - valueOld) /3. )\n",
     "    diffOld = diff\n",
@@ -574,7 +570,7 @@
     "    jmax = 10* 2**k\n",
     "    imax = int(sigma*sigma*T*jmax*jmax)\n",
     "    S,vAmerican = finiteDiff_AmericanPut_njit(X,T, r , sigma,SU,imax,jmax)\n",
-    "    value =  numpy.interp( X , S , vAmerican )\n",
+    "    value =  np.interp( X , S , vAmerican )\n",
     "    diff = value - valueOld\n",
     "    print( imax,jmax , value , (4.*value - valueOld) /3. )\n",
     "    diffOld = diff\n",
@@ -619,7 +615,7 @@
     "    jmax = 10* 2**k\n",
     "    imax = int(sigma*sigma*T*jmax*jmax)\n",
     "    S,vAmerican = finiteDiff_AmericanPut_njit(X,T, r , sigma,SU,imax,jmax)\n",
-    "    value =  numpy.interp( X , S , vAmerican )\n",
+    "    value =  np.interp( X , S , vAmerican )\n",
     "    diff = value - valueOld\n",
     "    print( imax,jmax , value , (4.*value - valueOld) /3. )\n",
     "    diffOld = diff\n",
@@ -699,10 +695,10 @@
     "    dS = SU / jmax\n",
     "    dt = T / imax\n",
     "\n",
-    "    S = numpy.zeros(jmax+1)\n",
-    "    t = numpy.zeros(imax+1)\n",
-    "    vNew = numpy.zeros(jmax+1)\n",
-    "    vOld = numpy.zeros(jmax+1)\n",
+    "    S = np.zeros(jmax+1)\n",
+    "    t = np.zeros(imax+1)\n",
+    "    vNew = np.zeros(jmax+1)\n",
+    "    vOld = np.zeros(jmax+1)\n",
     "\n",
     "    # calculate the values of S_j and t^i and check they work as expected\n",
     "    for i in range(imax+1):\n",
@@ -716,7 +712,7 @@
     "        vOld[j] = max( X - S[j] , 0.0 )\n",
     "        vNew[j] = max( X - S[j] , 0.0 )\n",
     "        \n",
-    "    A_banded = numpy.zeros(shape=(3,jmax+1))\n",
+    "    A_banded = np.zeros(shape=(3,jmax+1))\n",
     "    u=1\n",
     "    l=1\n",
     "    l_and_u = (l, u)\n",
@@ -736,11 +732,11 @@
     "    A_banded[1][jmax] = 1.0 # b_jmax\n",
     "    \n",
     "    # create a new copy of A_banded, that can be adjusted depending on the penalty\n",
-    "    A_banded_dash = numpy.copy(A_banded)\n",
+    "    A_banded_dash = np.copy(A_banded)\n",
     "\n",
     "    for i in range(imax-1,-1,-1):\n",
     "        # Create a vector for multiplication\n",
-    "        d = numpy.zeros(jmax+1)\n",
+    "        d = np.zeros(jmax+1)\n",
     "        \n",
     "        # adjust boundary condition to be P=X because it is American\n",
     "        d[0] = X\n",
@@ -752,7 +748,7 @@
     "        d[jmax] = 0.0\n",
     "        \n",
     "        # create a new copy of d, that can be adjusted depending on the penalty\n",
-    "        d_dash = numpy.copy(d)\n",
+    "        d_dash = np.copy(d)\n",
     "            \n",
     "        ## Penalty loop to solve for vNew\n",
     "        for q in range(maxiter):\n",
@@ -786,13 +782,13 @@
     "            # update the value of vNew\n",
     "            vNew = y\n",
     "            # check the norm against the tolerance for convergence\n",
-    "            if numpy.linalg.norm(e,1) < tol:\n",
+    "            if np.linalg.norm(e,1) < tol:\n",
     "                print(\"Solved at step \",i,\". Converged after \",q,\"iterations.\")\n",
     "                # exit from the penalty loop\n",
     "                break\n",
     "        ##  solved for vNew\n",
     "        \n",
-    "        vOld = numpy.copy(vNew)\n",
+    "        vOld = np.copy(vNew)\n",
     "        \n",
     "    return S,vNew"
    ]
@@ -861,7 +857,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x16824ab40>]"
+       "[<matplotlib.lines.Line2D at 0x1281faed0>]"
       ]
      },
      "execution_count": 15,
